# cfp

./: .gitignore  LICENSE  README.md  pyproject.toml
cfp/: __main__.py  app.py  assign.py  utils.py
