[project]
name = "cfp"
version = "0.1.0"
description = "Utilities for the Program Team of PyCon GR"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.0",
    "rich>=14.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.9",
]

[tool.mypy]
strict = true
files = ["cfp"]

[tool.ruff]
line-length = 99
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I"]


